--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #main {
-    width: 99%;
+    width: 95%;
     background-color:rgb(23, 18, 29);
     color:snow;
     padding: 10px;
@@ -44,9 +44,13 @@
     margin-left: auto;
     margin-right: auto;
     text-align: left;
-
-
 }
+
+@media (max-width: 900px) {
+    #chronology {
+      width: 100%;
+    }
+  }
 
 a:visited {
 color:rgb(6, 243, 243)
@@ -65,3 +69,4 @@ blockquote {
     padding: 20px;
     
 }
+
