--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #main {
-    width: 95%;
+    width: 99%;
     background-color:rgb(23, 18, 29);
     color:snow;
     padding: 10px;
@@ -8,6 +8,11 @@
     font-family:Arial, Helvetica, sans-serif;
     text-align: center;
 }
+@media (max-width: 900px) {
+    #main {
+      width: 80%;
+    }
+  }
 
 #title {
     font-size: 25px;
