--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #main {
     width: 99%;
     background-color:rgb(23, 18, 29);
-    color:snow;
+    color:rgb(204, 204, 165);
     padding: 10px;
     margin-top: 30px;
     border-radius: 0.5%;
